Add the steps to reproduce the illustrative example from submission

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <script type="text/javascript" src="index.js"></script>
   </head>
   <body>
+    <p style="max-width: 40em; margin: auto; margin-top: 3ex; margin-bottom: 3ex; background-color: AliceBlue; padding: 1ex; border: 1px solid black; border-radius: 1em;" >
+      <a href="softwarex-illustrative-example.html">Follow these steps to reproduce the illustrative example in the SoftwareX submission…</a>
+    </p>
     <slam-window></slam-window>
   </body>
 </html>
