Allow to reset the start and stop date during the edition of an annotation

--- a/public/labels/index.html
+++ b/public/labels/index.html
@@ -54,6 +54,9 @@
       };
     </script>
     <p>
+      If you made a mistake, click the Reset button.
+    </p>
+    <p>
       The next step is to select the annotation class and channel
       location. When that’s done, you can enable or disable the save
       and delete buttons as you wish.
