Expect the Lytonepal ontology to now live on GitHub Pages

--- a/public/labels/index.html
+++ b/public/labels/index.html
@@ -23,11 +23,11 @@
     <script type="text/javascript" class="demo-script">
       window.add_meta = () => {
 	  const form = document.getElementById ('form');
-	  form.add_annotation_class ('https://localhost/lytonepal#Pointe', 'Pointe');
-	  form.add_annotation_class ('https://localhost/lytonepal#Encoche', 'Encoche');
+	  form.add_annotation_class ('https://neonatool.github.io/slam/ontology/lytonepal.en.html#Pointe', 'Pointe');
+	  form.add_annotation_class ('https://neonatool.github.io/slam/ontology/lytonepal.en.html#Encoche', 'Encoche');
 	  // ...
-	  form.add_channel_type ('https://localhost/lytonepal#Fp1', 'Fp1');
-	  form.add_channel_type ('https://localhost/lytonepal#O1', 'O1');
+	  form.add_channel_type ('https://neonatool.github.io/slam/ontology/lytonepal.en.html#Fp1', 'Fp1');
+	  form.add_channel_type ('https://neonatool.github.io/slam/ontology/lytonepal.en.html#O1', 'O1');
 	  // ...
 	  return false; // bound to this page’s link onclick
       };
