--- a/public/model/index.html
+++ b/public/model/index.html
@@ -31,8 +31,8 @@
       be an IRI reference, such as:
     </p>
     <p>
-      <a href="https://localhost/lytonepal#start-date"
-	 >https://localhost/lytonepal#start-date</a>
+      <a href="https://neonatool.github.io/slam/ontology/lytonepal.en.html#start-date"
+	 >https://neonatool.github.io/slam/ontology/lytonepal.en.html#start-date</a>
     </p>
     <p>
       This is the simplest data pattern that you can match against the
